<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/grey">

    <TextView
        android:text="@string/convert_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginRight="20dp"
        android:id="@+id/textView"
        android:textColor="@color/purple" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/amount_edit_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="1.0"
        android:textColor="@color/light_blue"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/unit_type_spinner"
        android:layout_below="@+id/amount_edit_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/unit_type_spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:columnCount="2"
        android:rowCount="6"
        android:orientation="horizontal"
        android:padding="15dp"
        android:background="@color/grey">
        <TextView
            android:id="@+id/tsp_text_view"
            android:text="@string/default_teaspoon"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/light_blue"/>
        <TextView
            android:id="@+id/cup_text_view"
            android:text="@string/cup_text_view"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/light_blue"/>

        <TextView
            android:id="@+id/tbs_text_view"
            android:text="@string/tbs_textview"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/light_blue"/>
        <TextView
            android:id="@+id/oz_text_view"
            android:text="@string/oz_textview"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/light_blue"/>
        <TextView
            android:id="@+id/kg_text_view"
            android:text="@string/kg_textview"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/light_blue"/>
        <TextView
            android:id="@+id/quart_text_view"
            android:text="@string/quart_textview"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/light_blue"/>
        <TextView
            android:id="@+id/gallon_text_view"
            android:text="@string/gl_textview"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/light_blue"/>
        <TextView
            android:id="@+id/pound_text_view"
            android:text="@string/lbs_textview"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/light_blue"/>
        <TextView
            android:id="@+id/ml_text_view"
            android:text="@string/ml_textview"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/light_blue"/>
        <TextView
            android:id="@+id/liter_text_view"
            android:text="@string/liter_textview"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/light_blue"/>
        <TextView
            android:id="@+id/mg_text_view"
            android:text="@string/mg_textview"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/light_blue"/>
        <TextView
            android:id="@+id/pint_text_view"
            android:text="@string/pint_textview"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/light_blue"/>
    </GridLayout>

</RelativeLayout>
